<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/top_times_bar_height"
    android:layout_margin="@dimen/attendence_bars_margin"
    android:layout_alignParentBottom="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/attendence_bars_margin"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/major_minor_label_size"
            android:text="@string/major_time"
            android:id="@+id/tv_majorTimeLabel"
            android:textColor="@color/carolinaBlue2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_majorTime1"
                android:textSize="@dimen/major_minor_time_size"
                android:text="@string/mock_major_time1"
                android:textColor="@color/carolinaBlue1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_majorTime2"
                android:textSize="@dimen/major_minor_time_size"
                android:text="@string/mock_major_time2"
                android:textColor="@color/carolinaBlue1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_majorTime3"
                android:textSize="@dimen/major_minor_time_size"
                android:text="@string/mock_major_time3"
                android:textColor="@color/carolinaBlue1"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/attendence_bars_margin"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/major_minor_label_size"
            android:text="@string/minor_time"
            android:id="@+id/tv_minorTimeLabel"
            android:textColor="@color/carolinaBlue2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_minorTime1"
                android:textSize="@dimen/major_minor_time_size"
                android:text="@string/mock_minor_time1"
                android:textColor="@color/carolinaBlue1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_minorTime2"
                android:textSize="@dimen/major_minor_time_size"
                android:text="@string/mock_minor_time2"
                android:textColor="@color/carolinaBlue1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_minorTime3"
                android:textSize="@dimen/major_minor_time_size"
                android:textColor="@color/carolinaBlue1"
                />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>