<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:layout_alignParentBottom="true"
    android:background="@color/primary"
    >

    <!-- Relative layout for the open and closing times -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/open_close_bar_height"
        android:layout_above="@+id/ad_layout">
        
        <ImageView
            android:layout_width="@dimen/open_close_bar_height"
            android:layout_height="match_parent"
            android:src="@drawable/ic_schedule_white_48dp"
            android:id="@+id/img_clockIcon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/img_clockIcon"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/open_close_time_size"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/mock_open_time"
                    android:id="@+id/tv_openTime"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/open_close_label_size"
                    android:text="@string/open"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/open_close_time_size"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/mock_close_time"
                    android:id="@+id/tv_closeTime"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/open_close_label_size"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/ad_layout"></include>
</RelativeLayout>